--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
   "useTabs": false,
   "singleQuote": true,
   "trailingComma": "none",
+  "semi": false,
   "printWidth": 120,
   "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
   "overrides": [
